selector identifier done

--- a/public/main.html
+++ b/public/main.html
@@ -22,7 +22,7 @@
     <div class="mainpage">
         <iframe id="frm" src="shop.html" frameborder="0" style="height:500px"></iframe>
     </div>
-    <script src="zepto.min.js"></script>
+    <script src="jquery-1.9.1.min.js"></script>
     <script src="sea.js" data-main="app"></script>
 </body>
 </html>
