--- a/public/main.html
+++ b/public/main.html
@@ -3,15 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="/public/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="/public/js/angular.js"></script>
+    <script type="text/javascript" src="/public/js/jquery.min.js"></script>
+
     <style>
-    body,div,ul,iframe,li,a{margin:0;padding:0;}
     .toolbar{
         height:35px;
         background-color: #333;
     }
-    .mainpage iframe{
-        width: 100%;
+    #frm{
+        height:500px;
+        width: 1000px;
+    }
+
+
+    #pane{
+        position:fixed;
+        display: table;
+        top:0;
+        right: 0;
+        z-index: 1010;
+        padding: 1px;
+        background-color: #ffffff;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 6px 0 0 6px;
         height:100%;
+    }
+    #pane .toggle{
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    #pane .main{
+        display: table-cell;
+    }
+
+    #pane .nav{
+        width:180px;
+    }
+
+    #pane .nav li:after{
+        clear:both;
+        display: block;
+        content: "\20"
+    }
+    #pane .nav .remove{
+        float: right;
     }
     </style>
 </head>
@@ -20,9 +58,26 @@
         <input type="button" value="走！" id="go">
     </div>
     <div class="mainpage">
-        <iframe id="frm" src="shop.html" frameborder="0" style="height:500px"></iframe>
+        <div id="pane" ng-controller="Rules">
+            <a class="toggle" ng-click="toggle()">&lt;</a>
+            <div class="main">
+                <ul class="nav nav-list" ng-show="on">
+                <li ng-repeat="rule in rules">
+                    <div class="title">{{rule.a}}<a class="remove" ng-click="remove()">x</a>
+                    </div>
+                </li>
+            </ul>
+            </div>
+        </div>
+        <iframe id="frm" src="shop.html" frameborder="0"></iframe>
     </div>
-    <script src="jquery-1.9.1.min.js"></script>
-    <script src="sea.js" data-main="app"></script>
+    <script>
+    var rules = [
+            {a:1,b:2},
+            {a:3,b:4}
+        ];
+    </script>
+    <script src="/public/js/sea.js" data-main="app"></script>
+
 </body>
 </html>
