--- a/public/edit.html
+++ b/public/edit.html
@@ -10,7 +10,9 @@
     <style>
     
     #frm{
-        height:500px;
+        position: absolute;
+        top: 0;
+        height:100%;
         width: 1000px;
     }
     </style>
