--- a/public/edit.html
+++ b/public/edit.html
@@ -13,7 +13,7 @@
         position: absolute;
         top: 0;
         height:100%;
-        width: 1000px;
+        width:100%;
     }
     </style>
     
