--- a/public/shop.html
+++ b/public/shop.html
@@ -1685,6 +1685,8 @@ vipcard:"http://i1.static.dp/s/j/widget/vipcard.js"
 <script src="http://i3.static.dp/s/j/review.js" type="text/javascript"></script>
 <!-- 北京美食 #测试 -->
 <script src="http://i3.static.dp/s/j/page/shop.js" type="text/javascript"></script>
+
+<script src="/public/js/mootools-client.js" id="ga-conductor" data-city="shanghai" data-channel="food" data-pagekey="1"></script>
 <script>DP.ready(function(D){
 var ad_small, ad_link, ad_big, info_ad, ga_t, ad_l;
 if(info_ad){
